--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ img{
     font-size: 60px;
     color: #fff;
     font-weight: 700;
+    text-shadow: 2px 2px 3px black;
 }
 
 .apresentacao-texto p{
