--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@ header{
 }
 
 .nav-header a{
+    display: block;
+    padding: 10px;
     text-decoration: none;
     color: #fff;
     font-size: 24px;
@@ -30,7 +32,7 @@ header{
     color: #45567D;
 }
 
-img{
+.foto{
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -61,4 +63,48 @@ img{
     font-style: italic;
     margin-top: 20px;
     text-align: center;
+}
+
+/* PROJETOS */
+
+.img-galeria{
+    max-width: 100%;
+    display: block;
+}
+
+.projetos-container{
+    background-color: #45567D;
+}
+
+.projetos-container h2{
+    text-align: center;
+    padding-top: 100px;
+    font-family: 'Poppins' sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    color: #fff;
+}
+
+.projetos{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.projetos > div{
+    flex: 1 1 400px;
+    margin: 30px;
+}
+
+.title-galeria{
+    text-align: center;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #303841;
+    color: #fff;
+    font-size: 18px;
 }
