--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+a{
+    text-decoration: none;
+}
 
 header{
     display: flex;
@@ -91,7 +94,7 @@ header{
     max-width: 1000px;
     margin: 0 auto;
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
 }
 
 .projetos > div{
@@ -107,4 +110,33 @@ header{
     background-color: #303841;
     color: #fff;
     font-size: 18px;
+    transition: .4s;
+}
+
+.title-galeria:hover{
+    background-color: #414b57;
+}
+
+.btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 60px;
+}
+
+button{
+    width: 100px;
+    height: 50px;
+    border: transparent;
+    background-color: #303841;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: .2s;
+}
+
+button:hover{
+    background-color: #000000;
+    color: rgb(255, 255, 255);
 }
