--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,12 @@ a{
 
 header{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     position: fixed;
-    gap: 800px;
+    gap: 700px;
     width: 100%;
-    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.527) ;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.527) ;
     background-color: #be3144;
     height: 80px;   
 }
@@ -36,10 +36,9 @@ header{
 }
 
 .foto{
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
-    box-shadow: 1px 1px 5px 1px black;
 }
 
 /* apresentacao */
@@ -110,11 +109,21 @@ header{
     background-color: #303841;
     color: #fff;
     font-size: 18px;
-    transition: .4s;
+    transition: .5s;
 }
 
 .title-galeria:hover{
     background-color: #414b57;
+}
+
+.title-galeria:hover::before{
+    content: "<";
+    color: tomato;
+}
+
+.title-galeria:hover::after{
+    content: "/>";
+    color: tomato;
 }
 
 .btn{
@@ -125,7 +134,7 @@ header{
 }
 
 button{
-    width: 100px;
+    width: 150px;
     height: 50px;
     border: transparent;
     background-color: #303841;
@@ -137,6 +146,17 @@ button{
 }
 
 button:hover{
-    background-color: #000000;
+    background-color: #4b545e;
     color: rgb(255, 255, 255);
 }
+
+button:hover::before{
+    content: "< ";
+    color: tomato;
+}
+
+button:hover::after{
+    content: " />";
+    color: tomato;
+}
+
