--- a/css/style.css
+++ b/css/style.css
@@ -160,3 +160,76 @@ button:hover::after{
     color: tomato;
 }
 
+/* CONTATOS */
+
+.contatos{
+    width: 100%;
+    height: 500px;
+    background-color: #303841;
+}
+
+.titulo-contato{
+    width: 100%;
+    color: white;
+    padding-top: 150px;
+    text-align: center;
+}
+
+.titulo-contato h2{
+    font-size: 60px;
+    margin: 0 auto;
+    font-weight: 700;
+}
+
+.titulo-contato p{
+    padding-top: 20px;
+    font-size: 24px;
+    font-style: italic;
+}
+
+.lista-contato{
+    display: flex;
+    width: 100%;
+    padding-top: 90px;
+    justify-content: space-around;
+}
+
+.lista-contato li{
+    list-style: none;
+}
+
+.lista-contato a{
+    color: white;
+    font-size: 26px;
+    text-shadow: 2px 2px 2px black;
+    transition: .4s;
+}
+
+.lista-contato li span, i{
+    margin-right: 7px;
+}
+
+.lista-contato a:hover{
+    color: rgb(145, 145, 145);
+}
+
+footer{
+    background-color: #303841;
+    width: 100%;
+    height: 100px;
+    border-top: 4px solid #be3144;
+}
+
+footer p{
+    text-align: center;
+    padding-top: 40px;
+    font-size: 20px;
+    color: white;
+    text-shadow: 1px 1px 2px black;
+    font-weight: 700;
+}
+
+
+
+
+
